web/django/static/css/styles.css
body, html {
  margin: 0;
  padding: 0;
  height: 100%;
  background-color: #212529;
}

.qd_connect {
  background-color: #00babc;
}

.fit-cover {
  object-fit: cover;
}

.icon-tabler-home:hover, .icon-tabler-home.active {
  color: #5abfea;
}

.icon-tabler-user-circle:hover, .icon-tabler-user-circle.active {
  color: var(--bs-primary-border-subtle);
}

.icon-tabler-list-numbers:hover, .icon-tabler-list-numbers.active {
  color: #edd32c;
}

.icon-tabler-message-chatbot:hover, .icon-tabler-message-chatbot.active {
  color: #30c12e;
}

.icon-tabler-settings:hover, .icon-tabler-settings.active {
  color: #6d767e;
}

::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

::-webkit-scrollbar-button {
  width: 0px;
  height: 0px;
}

::-webkit-scrollbar-thumb {
  background: var(--bs-gray-300);
  border: 0px none #ffffff;
  border-radius: 50px;
}

::-webkit-scrollbar-thumb:hover {
  background: #ffffff;
}

::-webkit-scrollbar-thumb:active {
  background: #000000;
}

::-webkit-scrollbar-track {
  background: #666666;
  border: 0px none #ffffff;
  border-radius: 50px;
}

::-webkit-scrollbar-track:hover {
  background: #666666;
}

::-webkit-scrollbar-track:active {
  background: #333333;
}

::-webkit-scrollbar-corner {
  background: transparent;
}

#navtoggle, #notiftoggle {
  visibility: hidden;
  display: none;
}

.form-label {
  cursor: pointer;
}

#navtoggle:checked ~ .navbar-container {
  transform: translateX(-105px);
}

#navtoggle:checked ~ .navbar-container .icon-tabler-arrow-badge-left {
  transform: rotate(180deg);
  transition: transform 0.5s ease;
}

.navbar-container {
  transform: translateX(0px);
}

.icon-tabler-arrow-badge-left {
  transition: transform 0.5s ease;
}

#searchProfileInput:focus, #searchGameInput:focus, #chatInput:focus {
  outline: none;
}

.roomel {
  flex: 1 1 20%;
  box-sizing: border-box;
}

@media (max-width: 800px) {
  .gameroom {
    flex-direction: column;
  }
}

.room-name, .room-creator, .room-type, .nb-players {
  color: #5abfea;
}

.gameinfos {
  flex: 1 1 25%;
}

.versus, .gameinfos, .game-duration, .game-date {
  color: var(--bs-secondary);
}

.total-games, .total-tournaments {
  color: rgb(220,149,66);
}

.total-won {
  color: var(--bs-form-valid-color);
}

.total-loss {
  color: var(--bs-form-invalid-color);
}

.leadcolumns {
  flex: 1 1 33%;
}

.first-place {
  z-index: 998;
}

.leaderboardinfos {
  flex: 1 1 25%;
}

a:link { 
  text-decoration: none; 
} 
a:visited { 
  text-decoration: none; 
} 
a:hover { 
  text-decoration: none; 
} 
a:active { 
  text-decoration: none; 
}

#notiftoggle:checked ~ .notif-panel {
  display: block;
}

.notif-panel {
  display: none;
}

#notif-toggler, .notif-panel{
  bottom: 0px;
  position: fixed;
}

.connectButton:hover, .cardmode:hover{
  transform: scale(1.1);
  transition: all 300ms;
}


.form-check-label {
  cursor: pointer;
}

#formCheckBsizeSmall, #formCheckBsizeMedium, #formCheckBsizeLarge,
#formCheckPdsizeSmall, #formCheckPdsizeMedium, #formCheckPdsizeLarge,
#formCheckAiDiffEasy, #formCheckAiDiffNormal, #formCheckAiDiffHard {
  visibility: hidden;
  display: none;
}

.radiogroup input[type="radio"]:checked + label img {
  border: 2px solid var(--bs-primary);
  border-radius: 23px;
}

.radiogroup input[type="radio"]:checked + label i {
  border: 2px solid var(--bs-primary);
}

.radiogroup input[type="radio"]:checked + label svg {
  border: 2px solid var(--bs-primary);
}

input[type="file"] {
  display: none;
}

#photoUpload {
  cursor: pointer;
}

.refreshButton:hover {
  transform: rotate(-360deg);
  transition: transform 0.5s ease;
}

.actionBtn {
  background: rgba(0,0,0,0);
  border-radius: 20px;
  width: 90%;
  height: 100%;
  border-style: none;
}

.seeProfile:hover {
  border-style: solid;
  border-width: 1px;
  background: rgba(0,0,0,0);
  border-color: #ffffff;
}

.blockFriend:hover {
  border-style: solid;
  border-width: 1px;
  background: rgba(0,0,0,0);
  border-color: var(--bs-orange);
}

.unblockFriend:hover {
  border-style: solid;
  border-width: 1px;
  background: rgba(0,0,0,0);
  border-color: var(--bs-primary);
}

.removeFriend:hover {
  border-style: solid;
  border-width: 1px;
  background: rgba(0,0,0,0);
  border-color: var(--bs-form-invalid-color);
}

.inviteFriend:hover {
  border-style: solid;
  border-width: 1px;
  background: rgba(0,0,0,0);
  border-color: var(--bs-info-border-subtle);
}

.seeProfile {
  box-shadow: 0px 0px 4px 1px #ffffff;
}

.blockFriend {
  box-shadow: 0px 0px 4px 1px var(--bs-orange);
}

.unblockFriend {
  box-shadow: 0px 0px 4px 1px var(--bs-primary);
}

.removeFriend {
  box-shadow: 0px 0px 4px 1px var(--bs-form-invalid-color);
}

.inviteFriend {
  box-shadow: 0px 0px 4px 1px var(--bs-info-border-subtle);
}

.friendItemLink:hover .friendItem {
  background-color: var(--bs-gray-800);
}

.createGame::after, .createGame::before {
  content: '';
  position: absolute;
  height: 102%;
  width: 102%;
  background-image: conic-gradient(from var(--angle), transparent, rgb(145,189,254));
  z-index: -1;
  border-radius: 10px;
  animation: 2.5s spin linear infinite;
}

.createGame::before {
  filter: blur(1.5rem);
  opacity: 0.5;
}

@keyframes spin {
  from {
    --angle: 0deg;
  }
  to {
    --angle: 360deg;
  }
}

@property --angle {
  syntax: "<angle>";
  initial-value: 0deg;
  inherits: false;
}

